@startuml
hide members
hide methods
class Game

class Entry

class Item

class Player

class StaticGame

class Team

class Timeline

class Tournament

Tournament "1" --- "*" Team : Contains >
Tournament "1" --- "*" StaticGame : Tracks >

StaticGame "1" o.. "1" Game : Influenced by >
Team "2" - "*" Game : Plays in >

Game "1" o--o "1" Timeline : writes to >

Timeline "1" -- "*" Entry : Contains >

Team "1" - "*" Player : Owns >

Player ---|> Item
Team ---|> Item

@enduml